--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@smui/button": "^7.0.0-beta.14",
     "@smui/card": "^7.0.0-beta.14",
+    "@smui/form-field": "^7.0.0-beta.14",
     "@smui/icon-button": "^7.0.0-beta.14",
     "@smui/list": "^7.0.0-beta.14",
+    "@smui/radio": "^7.0.0-beta.14",
     "@smui/textfield": "^7.0.0-beta.14",
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@tsconfig/svelte": "^3.0.0",
