--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@smui/icon-button": "^7.0.0-beta.14",
     "@smui/list": "^7.0.0-beta.14",
     "@smui/radio": "^7.0.0-beta.14",
+    "@smui/tab": "^7.0.0-beta.14",
+    "@smui/tab-bar": "^7.0.0-beta.14",
     "@smui/textfield": "^7.0.0-beta.14",
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@tsconfig/svelte": "^3.0.0",
@@ -29,11 +31,9 @@
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
+    "svelte-routing": "^2.0.0",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
-  },
-  "dependencies": {
-    "nodesu": "^0.7.3"
   }
 }
