--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,5 +35,10 @@
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
+  },
+  "dependencies": {
+    "chart.js": "^4.3.3",
+    "dayjs": "^1.11.9",
+    "echarts": "^5.4.3"
   }
 }
