--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@smui/button": "^7.0.0-beta.14",
     "@smui/card": "^7.0.0-beta.14",
+    "@smui/common": "^7.0.0-beta.14",
     "@smui/form-field": "^7.0.0-beta.14",
     "@smui/icon-button": "^7.0.0-beta.14",
     "@smui/list": "^7.0.0-beta.14",
@@ -33,6 +34,7 @@
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
     "svelte-routing": "^2.0.0",
+    "svelte-tooltip": "^1.2.0",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
