--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@smui/icon-button": "^7.0.0-beta.14",
     "@smui/list": "^7.0.0-beta.14",
     "@smui/radio": "^7.0.0-beta.14",
+    "@smui/select": "^7.0.0-beta.14",
     "@smui/tab": "^7.0.0-beta.14",
     "@smui/tab-bar": "^7.0.0-beta.14",
     "@smui/textfield": "^7.0.0-beta.14",
