--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@smui/button": "^7.0.0-beta.14",
     "@smui/card": "^7.0.0-beta.14",
+    "@smui/circular-progress": "^7.0.0-beta.15",
     "@smui/common": "^7.0.0-beta.14",
     "@smui/form-field": "^7.0.0-beta.14",
     "@smui/icon-button": "^7.0.0-beta.14",
